[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/theme_btn_focus.tres" type="StyleBox" id=2]
[ext_resource path="res://reusabe_menus/settings/Option.gd" type="Script" id=3]




[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.117647, 0.117647, 0.117647, 0.745098 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )

[node name="Option" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_right = -280.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnLeft" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -270.0
margin_right = -230.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "<<"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -230.0
margin_right = -70.0
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnRight" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -70.0
margin_right = -30.0
focus_mode = 0
enabled_focus_mode = 0
text = ">>"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BtnLeft" to="." method="_on_btn_prev_pressed"]
[connection signal="pressed" from="BtnRight" to="." method="_on_btn_next_pressed"]
